# fastjson

./: .gitignore  Cargo.toml  build-rust-release.sh  build-rust.sh  build-v.sh  build.gradle  fastjson_rust  go.mod  rust-fn-macher-release
lib/: Makefile  matcher.c  matcher.h  matchertest  matchertest.c
src/main/c/: Makefile  matcher.c  matcher.h  matchermain.c  matchertest  matchertest-static  matchertest.c
src/main/go/: fastjson_main.go
src/main/java/sco3/: JsonbMain.java  fastjsonMain.java
src/main/mojo/: match_pattern.mojo
src/main/py/: devices.py  devices_traverse.py  matcher.py  printer.py  triad.py
src/main/rust/: main-serde-json.rs  main-simd-json.rs  main-sonic-rs.rs  main.rs  match_pattern.rs
src/main/rust/benches/: bench_pattern.rs
src/main/rust/tests/: test_pattern.rs
src/main/v/: main.v  matcher-main.v
src/main/v/mt/: matcher.v
src/test/data/: devices.json.asc
src/test/java/com/alibaba/fastjson2/: TestPathMatcher.java  TestPathParser.java
