[package]
name = "fastjson"
version = "0.1.0"
authors = ["scorta <scorta@gmail.com>"]
edition = "2018"


[[bin]]
name="rust_serde_json"
path = "src/main/rust/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
dirs = "4.0"
serde = "1.0"
serde_json = "1.0"
#simd-json = "0.3"

[profile.release]
opt-level = 3
rustflags = ["-C", "target-cpu=native"]

[profile.dev]
opt-level = 0
debug = true

